--- a/configure.ac
+++ b/configure.ac
@@ -390,7 +390,7 @@ then
 	ac_sys_release=
     else
 	ac_sys_system=`uname -s`
-	if test "$ac_sys_system" = "AIX" \
+	if test "$ac_sys_system" = "AIX" -o "$ac_sys_system" = "OS400" \
 	-o "$ac_sys_system" = "UnixWare" -o "$ac_sys_system" = "OpenUNIX"; then
 		ac_sys_release=`uname -v`
 	else
@@ -1014,7 +1014,7 @@ if test -z "$LINKCC"
 then
 	LINKCC='$(PURIFY) $(MAINCC)'
 	case $ac_sys_system in
-	AIX*)
+	AIX*|OS400*)
 	   exp_extra="\"\""
 	   if test $ac_sys_release -ge 5 -o \
 		   $ac_sys_release -eq 4 -a `uname -r` -ge 2 ; then
@@ -1146,7 +1146,7 @@ if test $enable_shared = "yes"; then
 	BLDLIBRARY='-L. -lpython$(LDVERSION)'
 	RUNSHARED=DYLD_LIBRARY_PATH=`pwd`${DYLD_LIBRARY_PATH:+:${DYLD_LIBRARY_PATH}}
 	;;
-    AIX*)
+    AIX*|OS400*)
 	LDLIBRARY='libpython$(LDVERSION).so'
 	RUNSHARED=LIBPATH=`pwd`${LIBPATH:+:${LIBPATH}}
 	;;
@@ -2272,7 +2272,7 @@ if test "$use_lfs" = "yes"; then
 # Two defines needed to enable largefile support on various platforms
 # These may affect some typedefs
 case $ac_sys_system/$ac_sys_release in
-  AIX*)
+  AIX*|OS400*)
     # Only define _LARGE_FILES on 32-bit builds. 64-bit AIX supports LFS
     # by default so it's unnecessary and, more importantly, due to the poor way
     # AIX implemented _LARGE_FILES, it causes compile errors on 64-bit builds.
@@ -2537,9 +2537,16 @@ AC_MSG_CHECKING(LDSHARED)
 if test -z "$LDSHARED"
 then
 	case $ac_sys_system/$ac_sys_release in
-	AIX*)
-		BLDSHARED="Modules/ld_so_aix \$(CC) -bI:Modules/python.exp"
-		LDSHARED="\$(LIBPL)/ld_so_aix \$(CC) -bI:\$(LIBPL)/python.exp"
+	AIX*|OS400*)
+		bitmode=${OBJECT_MODE:-32}
+		if test "$GCC" = "yes" ; then
+			archflag="-maix$bitmode"
+		else
+			archflag="-q$bitmode"
+		fi
+
+		BLDSHARED="Modules/ld_so_aix \$(CC) $archflag -bI:Modules/python.exp"
+		LDSHARED="\$(LIBPL)/ld_so_aix \$(CC) $archflag -bI:\$(LIBPL)/python.exp"
 		;;
 	SunOS/5*)
 		if test "$GCC" = "yes" ; then
@@ -2706,7 +2713,7 @@ AC_MSG_CHECKING(LINKFORSHARED)
 if test -z "$LINKFORSHARED"
 then
 	case $ac_sys_system/$ac_sys_release in
-	AIX*)	LINKFORSHARED='-Wl,-bE:Modules/python.exp -lld';;
+	AIX*|OS400*)	LINKFORSHARED='-Wl,-bE:Modules/python.exp -lld';;
 	hp*|HP*)
 	    LINKFORSHARED="-Wl,-E -Wl,+s";;
 #	    LINKFORSHARED="-Wl,-E -Wl,+s -Wl,+b\$(BINLIBDEST)/lib-dynload";;
@@ -2852,7 +2859,7 @@ AC_CHECK_LIB(intl, textdomain,
 
 # checks for system dependent C++ extensions support
 case "$ac_sys_system" in
-	AIX*)	AC_MSG_CHECKING(for genuine AIX C++ extensions support)
+	AIX*|OS400*)	AC_MSG_CHECKING(for genuine AIX C++ extensions support)
 		AC_LINK_IFELSE([
 		  AC_LANG_PROGRAM([[#include <load.h>]],
 				  [[loadAndInit("", 0, "")]])
@@ -3201,7 +3208,7 @@ if test "$posix_threads" = "yes"; then
       SunOS/5.8) AC_DEFINE(HAVE_BROKEN_POSIX_SEMAPHORES, 1,
 		       [Define if the Posix semaphores do not work on your system])
 		       ;;
-      AIX/*) AC_DEFINE(HAVE_BROKEN_POSIX_SEMAPHORES, 1,
+      AIX/*|OS400*) AC_DEFINE(HAVE_BROKEN_POSIX_SEMAPHORES, 1,
 		       [Define if the Posix semaphores do not work on your system])
 		       ;;
       esac
@@ -3532,7 +3539,7 @@ AC_MSG_CHECKING(DYNLOADFILE)
 if test -z "$DYNLOADFILE"
 then
 	case $ac_sys_system/$ac_sys_release in
-	AIX*) # Use dynload_shlib.c and dlopen() if we have it; otherwise dynload_aix.c
+	AIX*|OS400*) # Use dynload_shlib.c and dlopen() if we have it; otherwise dynload_aix.c
 	if test "$ac_cv_func_dlopen" = yes
 	then DYNLOADFILE="dynload_shlib.o"
 	else DYNLOADFILE="dynload_aix.o"
@@ -5318,7 +5325,7 @@ case "$ac_cv_computed_gotos" in yes*)
 esac
 
 case $ac_sys_system in
-AIX*)
+AIX*|OS400*)
   AC_DEFINE(HAVE_BROKEN_PIPE_BUF, 1, [Define if the system reports an invalid PIPE_BUF value.]) ;;
 esac
 
